kubernetes/02-apps/03-media/05-radarr/01-ingress.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  namespace: media
  name: radarr-ingress
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`radarr.media.kalexlab.xyz`)
      services:
        - name: radarr
          port: 7878
  tls:
    secretName: radarr-ingress-certificate-secret
